--- a/index.html
+++ b/index.html
@@ -10,11 +10,30 @@
         height: 200px;
         font-size: 30px;
       }
+	a:link {
+  color: #000;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #000;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #000;
+  text-decoration: none;
+}
+
+a:active {
+  color: #000;
+  text-decoration: none;
+}	
     </style>
   </head>
   <body>
     <div class="center">
-      <p>ok chomu.</p>
+      <p>ok chomu<a href="/ana.pdf">.</a></p>
     </div>
   </body>
 </html>
